@@ -1,6 +1,11 @@
 # ChangeLog for dev-ml/tyxml
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/tyxml/ChangeLog,v 1.1 2012/03/30 11:40:53 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/tyxml/ChangeLog,v 1.2 2012/06/12 12:51:31 aballier Exp $
+
+*tyxml-2.1 (12 Jun 2012)
+
+  12 Jun 2012; Alexis Ballier <aballier@gentoo.org> +tyxml-2.1.ebuild:
+  version bump
 
 *tyxml-2.0.2 (30 Mar 2012)
 
